cmake_minimum_required(VERSION 3.26)
project(StrukturnoProgramiranje)

set(CMAKE_CXX_STANDARD 17)
add_executable(Exercise1 Exercises/Exercise1.cpp)
add_executable(Exercise2 Exercises/Exercise2.cpp)
add_executable(Exercise3 Exercises/Exercise3.cpp)
add_executable(Exercise4 Exercises/Exercise4.cpp)
add_executable(Exercise5 Exercises/Exercise5.cpp)
add_executable(Exercise6 Exercises/Exercise6.cpp)
add_executable(Exercise7 Exercises/Exercise7.cpp)
add_executable(Exercise8 Exercises/Exercise8.cpp)
add_executable(Exercise9 Exercises/Exercise9.cpp)
add_executable(Exercise10 Exercises/Exercise10.cpp)
add_executable(Exercise11 Exercises/Exercise11.cpp)
add_executable(Exercise12 Exercises/Exercise12.cpp)
add_executable(Exercise13 Exercises/Exercise13.cpp)
add_executable(Exercise14 Exercises/Exercise14.cpp)
add_executable(Exercise15 Exercises/Exercise15.cpp)
add_executable(Exercise16 Exercises/Exercise16.cpp)
add_executable(Exercise17 Exercises/Exercise17.cpp)
add_executable(Exercise18 Exercises/Exercise18.cpp)
add_executable(Exercise19 Exercises/Exercise19.cpp)
add_executable(Exercise20 Exercises/Exercise20.cpp)
add_executable(Exercise21 Exercises/Exercise21.cpp)
add_executable(Exercise22 Exercises/Exercise22.cpp)
add_executable(Exercise23 Exercises/Exercise23.cpp)
add_executable(Exercise24 Exercises/Exercise24.cpp)
add_executable(Exercise25 Exercises/Exercise25.cpp)
add_executable(Exercise26 Exercises/Exercise26.cpp)
add_executable(Exercise27 Exercises/Exercise27.cpp)
add_executable(Exercise28 Exercises/Exercise28.cpp)
add_executable(Exercise29 Exercises/Exercise29.cpp)




